--- a/src/app/pages/about-us/components/about-us/about-us.component.html
+++ b/src/app/pages/about-us/components/about-us/about-us.component.html
@@ -103,117 +103,47 @@
         </div>
     </div>
 </section>
-<section class="aboutSFive">
-    <div class="aboutSFive-container px-120">
-        <span class="color-linearGradient font-medium text-center d-block subtitle24px mb24">Our training
-            programes</span>
-        <h1 class="font-bold subtitle48px colorOne text-center mb24" data-aos="zoom-in-up"> How to
-            Build Your
-            Own<span class="color-linearGradient">
-                Professional<br>DB Consulting
-            </span> Service in 40
-            Days?</h1>
-        <p class="style-font text-center colorTwo subtitle24px p-head">DB Consulting specializes in SQL Server,
-            our
-            tutorial and
-            training is
-            founded on
-            real-life
-            experience, and we practice
-            what we preach! In addition to training courses and workshops, we offer</p>
-        <div class="d-flex fx-trainingProgrames fxGeneral-cards">
-            <div class="trainingProgrames-box d-flex flex-column align-items-center fxCard box1"
-                style="background-image: url(../../../../../assets/images/box1.svg);">
-                <div class="trainingProgrames-texts d-flex flex-column align-items-center">
-                    <img src="../../../../../assets/images/rateWhite.svg" alt="rate White icon" class="rateWhite">
-                    <h4 class="font-bold colorWhite subtitle24px ">Fundamental Level</h4>
-                    <p class="font-medium colorWhite subtitle16px  mb-0">How to build and manage <br> your
-                        database
-                        infrastructure <br>
-                        in 10 days?</p>
-                </div>
+<section class="aboutSSix">
+    <div class="aboutSSix-container px-120">
+        <div class="d-flex flex-column gap24 sectionThree-titles">
+            <span class="font-medium text-center subtitle24px color-linearGradient">Project Timeline</span>
+            <h1 class="text-center font-bold subtitle48px" data-aos="fade-down"> <span class="color-linearGradient">AI
+                    Project </span>In The
+                <span class="color-linearGradient">Best </span>Milestones
+            </h1>
+            <p class="mb-0 text-center subtitle24px style-font">Design the digital twin architecture tailored to the
+                specific needs of the buildings.</p>
+        </div>
+
+        <div class="d-flex fx-aboutSSix">
+            <div class="box">
+                <img src="../../../../../assets/images/FoundingIcon.svg" alt="Founding Icon">
+                <h3 class="subtitle20px colorBlack style-font">Founding</h3>
             </div>
-            <div class=" d-flex flex-column align-items-center fxCard box2"
-                style="background-image: url(../../../../../assets/images/box2.png);">
-                <span class="colorWhite text-center font-medium">DB Consulting Overview</span>
-                <h1 class="subtitle24px color-linearGradient font-bold">Who should attend?</h1>
-                <div class="d-flex fxGeneral-cards">
-                    <div class="fxCard attendSection attendSection33">
-                        <h4 class="font-bold subtitle16px colorWhite text-center">SQL Server enthusiasts</h4>
-                        <p class="mb-0 text-center style-font colorWhite text-center">Those eager for hands-on
-                            experience.
-                        </p>
-                    </div>
-                    <div class="fxCard attendSection attendSection33">
-                        <h4 class="font-bold subtitle16px colorWhite text-center">MCSE aspirants</h4>
-                        <p class="mb-0 text-center style-font colorWhite text-center">Passionate about SQL
-                            Server
-                            certification.</p>
-                    </div>
-                    <div class="fxCard attendSection attendSection33">
-                        <h4 class="font-bold subtitle16px colorWhite text-center">T-SQL learners</h4>
-                        <p class="mb-0 text-center style-font colorWhite text-center">Anyone with basic T-SQL
-                            knowledge..
-                        </p>
-                    </div>
-                    <div class="fxCard attendSection attendSection50">
-                        <h4 class="font-bold subtitle16px colorWhite text-center">SQL Server professionals</h4>
-                        <p class="mb-0 text-center style-font colorWhite text-center">Those eager for hands-on
-                            experience.
-                        </p>
-                    </div>
-                    <div class="fxCard attendSection attendSection50">
-                        <h4 class="font-bold subtitle16px colorWhite text-center">Tech professionals</h4>
-                        <p class="mb-0 text-center style-font colorWhite text-center">.NET developers, DB
-                            admins, analysts,
-                            and
-                            engineers.</p>
-                    </div>
-                </div>
+            <div class=" boxDots">
+                <div class="circleRed1"></div>
+                <div class="circleRed2"></div>
+                <div class="circleRed3"></div>
+                <div class="circleRed4"></div>
             </div>
-            <div class="trainingProgrames-box  fxCard box3"
-                style="background-image: url(../../../../../assets/images/box3.svg);">
-                <div class="trainingProgrames-texts d-flex flex-column">
-                    <img src="../../../../../assets/images/rateWhite.svg" alt="rate White icon" class="rateWhite">
-                    <h4 class="font-bold colorWhite subtitle24px">Professional Level</h4>
-                    <p class="font-medium colorWhite subtitle16px  mb-0">How to Build your own Data
-                        Engineering Platform and Manage TB Data in <br>
-                        10 Days?</p>
-                </div>
+            <div class="box">
+                <img src="../../../../../assets/images/keyProjectsIcon.svg" alt="key projects Icon">
+                <h3 class="subtitle20px colorBlack style-font">key projects</h3>
             </div>
-            <div class="trainingProgrames-box  fxCard box4"
-                style="background-image: url(../../../../../assets/images/box4.svg);">
-                <div class="trainingProgrames-texts d-flex flex-column align-items-center justify-content-center">
-                    <img src="../../../../../assets/images/rateLinear.svg" alt="rate White icon" class="rateWhite">
-                    <h4 class="font-bold subtitle24px text-center">Professional Level</h4>
-                    <p class="style-font subtitle16px  mb-0 text-center">How to Build your own Data
-                        Engineering Platform and Manage TB Data in
-                        10 Days?</p>
-                </div>
+            <div class="boxDots">
+                <div class="circleRed1"></div>
+                <div class="circleRed2"></div>
+                <div class="circleRed3"></div>
+                <div class="circleRed4"></div>
             </div>
-            <div class="trainingProgrames-box  fxCard box5"
-                style="background-image: url(../../../../../assets/images/box5.svg);">
-                <div class="trainingProgrames-texts d-flex flex-column  justify-content-center">
-                    <img src="../../../../../assets/images/rateWhite.svg" alt="rate White icon" class="rateWhite">
-                    <h4 class="font-bold colorWhite subtitle24px text-center">Professional Level</h4>
-                    <p class="font-medium colorWhite subtitle16px  mb-0">How to Build your own Data <br>
-                        Engineering Platform and Manage TB Data in
-                        10 Days?</p>
-                </div>
-            </div>
-            <div class="trainingProgrames-box fxCard box6"
-                style="background-image: url(../../../../../assets/images/box6.svg);">
-                <div class="trainingProgrames-texts d-flex flex-column align-items-center justify-content-center">
-                    <img src="../../../../../assets/images/rateLinear.svg" alt="rate White icon" class="rateWhite">
-                    <h4 class="font-bold subtitle24px text-center text">Professional Level</h4>
-                    <p class="style-font subtitle16px  mb-0 text-center">How to Build your own Data
-                        Engineering Platform and Manage TB Data in
-                        10 Days?</p>
-                </div>
+            <div class="box">
+                <img src="../../../../../assets/images/partnershipsIcon.svg" alt="partnerships Icon">
+                <h3 class="subtitle20px colorBlack style-font">partnerships</h3>
             </div>
         </div>
     </div>
 </section>
+
 <section class="contactSection">
     <img src="../../../../../assets/images/CONTACT-text.svg" alt="CONTACT-text" class="contact-text">
     <div class="contactSection-container px-120">
