--- a/src/app/pages/index/components/home/home.component.html
+++ b/src/app/pages/index/components/home/home.component.html
@@ -1,31 +1,33 @@
 <section class="sectionOne">
     <div class="sectionOne-container px-120">
-        <h1 class="font-bold text-center">Welcome to <span class="color-linearGradient">Code</span></h1>
-        <p class=" font-medium p-head text-center">Inspire your
-            vision</p>
+        <h1 class="font-bold text-center">AI & Digital <span class="color-linearGradient">Transformation </span>Built
+            for Saudi Arabia</h1>
+        <!-- <p class=" font-medium p-head text-center">Inspire your
+            vision</p> -->
         <div class="d-flex fx-sectionOne">
             <div class="d-flex justify-content-between align-items-end part1-sectionOne">
                 <img src="../../../../../../assets/images/img-sectionOne.png" alt="img section One"
                     class="img-sectionOne">
                 <div class="texts-side">
                     <div class="d-flex fxHead-texts align-items-center">
-                        <span class="font-medium">Our story</span>
+                        <span class="font-bold colorThree">Our story</span>
                         <div class="border"></div>
                     </div>
-                    <p class="style-font subtitle20px colorBlack">We live in a world where competition in the
-                        business world</p>
-                    <div class="d-flex fxLast-texts">
+                    <p class="style-font subtitle20px colorBlack">We live in a world where competition in the business
+                        world is constantly rising & the need to be the best is greater
+                        than ever before.</p>
+                    <!-- <div class="d-flex fxLast-texts">
                         <img src="../../../../../../assets/images/arrow-linear.svg" alt="arrow linear"
                             class="arrow-linear">
                         <p class="mb-0 style-font subtitle20px colorBlack">is constantly rising and the need to
                             be the best is greater
                             than ever
                             before.</p>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="button-side">
                     <button class="btn-linearGradient" type="button">
-                        <span class="font-semiBold colorWhite subtitle20px">Know more</span>
+                        <span class="font-semiBold colorWhite subtitle20px">Explore AI Solutions</span>
                         <img src="../../../../../../assets/images/arrow-up-right.svg" alt="arrow-up-right">
                     </button>
                 </div>
@@ -60,16 +62,13 @@
     <div class="sectionTwo-container px-120">
         <div class="d-flex fx-sectionTwo">
             <div class="part1-sectionTwo">
-                <h4 class="font-medium color-linearGradient subtitle24px">Who we are?</h4>
-                <h1 class="font-bold mb-0 subtitle48px" data-aos="fade-down">We are Code bring your imagination
-                    to life with <span class="color-linearGradient">AI power</span></h1>
+                <h4 class="font-medium color-linearGradient subtitle24px">What you earn?</h4>
+                <h1 class="font-bold mb-0 subtitle48px" data-aos="fade-down">Cut Government IT Costs by<span
+                        class="color-linearGradient">30%</span></h1>
             </div>
-            <p class="style-font mb-0 subtitle24px">CODE is a leading partner for many heavy weight companies in
-                the ICT
-                sector, most notably Cisco, as it contributes to a large portion of Cisco’s business in Saudi
-                Arabia. <br> <br>
-                We live in a world where competition in the business world is constantly rising and the need to
-                be the best is greater than ever before.</p>
+            <p class="style-font mb-0 subtitle24px">CODE is a leading partner for many heavy weight companies in the ICT
+                sector, most notably Cisco, as it contributes to a
+                large portion of Cisco’s business in Saudi Arabia.</p>
         </div>
         <div class="fx-sectionTwoImgs d-flex align-items-center">
             <img src="../../../../../../assets/images/sectionTwo-img1.png" alt="Who we are img" class="sectionTwo-img1"
@@ -87,11 +86,10 @@
 </section>
 <section class="sectionThree">
     <div class="sectionThree-container px-120">
-        <div class="d-flex flex-column gap24">
+        <div class="d-flex flex-column gap24 sectionThree-titles">
             <span class="font-medium text-center subtitle24px color-linearGradient">What we do?</span>
-            <h1 class="text-center font-bold subtitle48px" data-aos="fade-down">Bring your imagination to life
-                <br> with AI power
-            </h1>
+            <h1 class="text-center font-bold subtitle48px" data-aos="fade-down">Bring your imagination to life with AI
+                power</h1>
             <p class="mb-0 text-center subtitle24px style-font">We love helping you bring ideas to life.</p>
         </div>
         <div class="d-flex fx-sectionThree">
@@ -122,7 +120,8 @@
         <div class="divTitles">
             <span class="font-medium text-center subtitle24px color-linearGradient d-block span-head">Our Trend solution
                 with AI Power</span>
-            <h1 class="text-center font-bold subtitle48px h1-head"><span class="color-linearGradient">AI Digital </span>
+            <h1 class="text-center font-bold subtitle48px h1-head"><span class="color-linearGradient">AI Digital twin
+                </span>
                 In video</h1>
             <p class="mb-0 text-center subtitle24px style-font">Design the digital twin architecture tailored to the
                 specific needs of the buildings.</p>
